part-4/exercise_4.06/manifests/broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-broadcaster
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: BROADCASTER_IMAGE
