part-4/exercise_4.06/manifests/todo-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: project
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 3001
