part-4/exercise_4.06/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-server-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8082
